Added ability to view reflection tables.

--- a/src/dials/SXDApp/assets/style.css
+++ b/src/dials/SXDApp/assets/style.css
@@ -31,3 +31,8 @@
 .rc-slider-handle:active {
   border-color: red;
 }
+
+.VirtualizedSelectOption {
+    background-color: rgb(48,48,48);
+    color: white;
+}
